--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,10 +8,10 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/ 
+  - title: "Research"
+    url: /research/ 
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
   
     
